# ml-clickup-chat

./: README.md  pyproject.toml
data/: CAPTURA DE GANHO - PROJETO HOME OFFICE.msg  Nova ferramenta Home Office - Atualização de mapa de acessos.msg  RE  Homologação EF MVP emergencial - Home Office.msg  RES  Ata - Follow up Projeto Home Office.msg  RES  DSOL HOME OFFICE MVP2  para Validação.msg  RES  VALIDAÇÃO DE REQUISITOS PARA MVP2 PROJETO PORTAL HOME OFFICE.msg
src/: main.py
