[tool.poetry]
name = "ml-clickup-chat"
version = "0.1.0"
description = "consuming data from clickupchat"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
blue = "^0.9.1"
isort = "^5.13.2"
extract-msg = "^0.48.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
